--- a/ej4.html
+++ b/ej4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>mi clase de videjugos </title>
+		<title>mi sorpresa de videjugos </title>
 	</head>
 	<body>
 
